kyy-k8s-config/src/app/website/mkaoyaya/mkaoyaya-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mkaoyaya
  name: mkaoyaya
spec:
  ports:
    - name: "8080"
      port: 8080
      targetPort: 8080
  selector:
    app: mkaoyaya
